--- a/init/netflix-proxy-admin.conf
+++ b/init/netflix-proxy-admin.conf
@@ -4,6 +4,5 @@ stop on runlevel [!2345]
 respawn
 script
   cd {{CWD}}/auth\
-    && . {{CWD}}/venv/bin/activate\
-    && {{CWD}}/venv/bin/python auth.py 43867
+    && python3 auth.py 43867
 end script
